# flowline-scada

./: .gitignore  METHODOLOGY.md  Methodology.md  README.md  build-linux.sh  build-windows.sh  build.ps1  build.sh  main.py  main_legacy.py  pyproject.toml  summary.txt
src/: __init__.py  components.py  flow.py  logging.py  properties.py  storages.py  types.py  ui.py  units.py
src/config/: __init__.py  core.py  manage.py  manager.py  storages.py  ui.py
src/pipeline/: __init__.py  components.py  core.py  manage.py  monitor.py  piping.py  solver.py  ui.py
src/ui/: __init__.py  builder.py  components.py  manage.py  manager.py  piping.py
