[project]
name = "flowline-scada"
version = "0.1.0"
description = "Hydrocarbon Flowline SCADA - Simulation and Leak detection."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "attrs>=25.3.0",
    "cachetools>=6.2.1",
    "cattrs>=25.2.0",
    "coolprop>=7.0.0",
    "nicegui>=2.22.2",
    "orjson>=3.11.2",
    "pint>=0.25",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
    "scipy>=1.16.2",
    "pywebview[qt]>=4.0.8",
]

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.16.0",
]

[tool.nicegui-pack.app]
entry = "main.py"
name = "FlowlineSCADA.exe"
onefile = true
icon = "assets/pipeline.ico"
windowed = true
include_data = true
